# ecom-visual-factory

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  jobs.py  main.py
app/data/: platform_rules.py
app/graph/: __init__.py  builder.py  state.py
app/graph/nodes/: __init__.py  asset_planning.py  cleaning.py  completion.py  image_generation.py  merge.py  prompt_generator.py  prompt_revision.py  qa.py  strategy.py  validator.py  vision.py  web.py
app/prompts/: constants.py  enhancers.py
app/schemas/: requests.py
app/services/: llm.py
app/static/: index.html
tests/: test_asset_planning.py  test_graph_flow.py  test_jobs.py  test_llm.py
