[project]
name = "ecom-visual-factory"
version = "0.1.0"
description = "LangGraph-based ecommerce visual prompt generation service."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "langgraph>=0.2.0",
  "openai>=1.0.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "redis>=5.0.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
